<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="25dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/txtview_titulo"
        android:textSize="22dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:typeface="sans"/>

    <EditText
        android:id="@+id/Nombre"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/txtview_user_nombre"
        android:textSize="18dp"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Apellidos"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/txtview_user_apellidos"
        android:textSize="18dp"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/txtview_user_email"
        android:textSize="18dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/Contrasenia"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/txtview_user_contra"
        android:textSize="18dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:text="@string/txtview_user_btnregistrar" />


</LinearLayout>